HTML/css/main.css
/* ... */
p {
    font-size:18px;
    line-height:24px;
    font-weight:300;
    letter-spacing:0.01em;
    margin-bottom:20px;
}

a, a:hover, a:focus {
    outline:none !important;
    text-decoration:none;
}

a {
  color: #228Ca8;
  text-decoration: none;
}

a:hover, a:focus {
  color: #229Cc8;
  text-decoration: none;
}

a:focus, .btn:focus {
  outline: none;
}

/*--------------------------Color Toggle---------------------------*/
.toggleWrapper {
    /* position: absolute;
    top: 50%;
    left: 50%; */
    overflow: hidden;
    padding: 0 50px;
    /* transform: translate3d(-50%, -50%, 0); */
}
.toggleWrapper input {
    position: absolute;
    left: -99em;
}
.toggle {
    cursor: pointer;
    display: inline-block;
    position: relative;
    width: 90px;
    height: 50px;
    background-color: #83d8ff;
    border-radius: 84px;
    transition: background-color 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
}
.toggle:before {
    content: "Dark";
    position: absolute;
    left: -42px;
    top: 15px;
    font-size: 18px;
}
.toggle:after {
    content: "Light";
    position: absolute;
    right: -42px;
    top: 15px;
    font-size: 18px;
    color: #a3a3a3;
}
.toggle__handler {
    display: inline-block;
    position: relative;
    z-index: 1;
    top: 3px;
    left: 3px;
    width: 44px;
    height: 44px;
    background-color: #ffcf96;
    border-radius: 50px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
    transition: all 400ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
    transform: rotate(-45deg);
}
.toggle__handler .crater {
    position: absolute;
    background-color: #e8cda5;
    opacity: 0;
    transition: opacity 200ms ease-in-out;
    border-radius: 100%;
}
.toggle__handler .crater--1 {
    top: 18px;
    left: 10px;
    width: 4px;
    height: 4px;
}
.toggle__handler .crater--2 {
    top: 28px;
    left: 22px;
    width: 6px;
    height: 6px;
}
.toggle__handler .crater--3 {
    top: 10px;
    left: 25px;
    width: 8px;
    height: 8px;
}
.star {
    position: absolute;
    background-color: #fff;
    transition: all 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
    border-radius: 50%;
}
.star--1 {
    top: 10px;
    left: 35px;
    z-index: 0;
    width: 30px;
    height: 3px;
}
.star--2 {
    top: 18px;
    left: 28px;
    z-index: 1;
    width: 30px;
    height: 3px;
}
.star--3 {
    top: 27px;
    left: 40px;
    z-index: 0;
    width: 30px;
    height: 3px;
}
.star--4, .star--5, .star--6 {
    opacity: 0;
    transition: all 300ms 0 cubic-bezier(0.445, 0.05, 0.55, 0.95);
}
.star--4 {
    top: 16px;
    left: 11px;
    z-index: 0;
    width: 2px;
    height: 2px;
    transform: translate3d(3px, 0, 0);
}
.star--5 {
    top: 32px;
    left: 17px;
    z-index: 0;
    width: 3px;
    height: 3px;
    transform: translate3d(3px, 0, 0);
}
.star--6 {
    top: 36px;
    left: 28px;
    z-index: 0;
    width: 2px;
    height: 2px;
    transform: translate3d(3px, 0, 0);
}
input:checked + .toggle {
    background-color: #749dd6;
}
input:checked + .toggle:before {
    color: #a3a3a3;
}
input:checked + .toggle:after {
    color: #fff;
}
input:checked + .toggle .toggle__handler {
    background-color: #ffe5b5;
    transform: translate3d(40px, 0, 0) rotate(0);
}
input:checked + .toggle .toggle__handler .crater {
    opacity: 1;
}
input:checked + .toggle .star--1 {
    width: 2px;
    height: 2px;
}
input:checked + .toggle .star--2 {
    width: 4px;
    height: 4px;
    transform: translate3d(-5px, 0, 0);
}
input:checked + .toggle .star--3 {
    width: 2px;
    height: 2px;
    transform: translate3d(-7px, 0, 0);
}
input:checked + .toggle .star--4, input:checked + .toggle .star--5, input:checked + .toggle .star--6 {
    opacity: 1;
    transform: translate3d(0, 0, 0);
}
input:checked + .toggle .star--4 {
    transition: all 300ms 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
}
input:checked + .toggle .star--5 {
    transition: all 300ms 300ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
}
input:checked + .toggle .star--6 {
    transition: all 300ms 400ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
}

/*--------------------------Navigation Styles---------------------------*/
.navbar-brand {
    padding:0 10px;
    font-size:30px;
    line-height:54px;
    font-weight:normal;
    height:auto;
    color:#a3a3a3;
}

.navbar-brand:hover, .navbar-brand:active, .navbar-brand:focus {
    color: #fff;
}

.navbar-brand span {
    font-size:24px;
    font-weight:300;
}

#main-nav.scrolled .navbar-brand {
    color:#a3a3a3;
}

#main-nav.scrolled .navbar-brand:hover {
    color:black;
}

#main-nav {
    background:transparent;
    color:#fff;
    box-shadow:0 0 0px transparent;
    -webkit-transition:background 0.3s ease-out;
    transition:background 0.3s ease-out;
}

#main-nav.scrolled {
    background:#fff;
    border-bottom:1px solid #ddd;
}

#main-nav .container {
    padding:20px 20px;
    -webkit-transition:padding 0.5s ease-out;
    transition:padding 0.5s ease-out;
}

#main-nav.scrolled .container {
    padding:0 20px;
}

#main-nav .nav a {
    padding:0px 10px;
    font-size:18px;
    line-height:54px;
    font-weight:400;
    background:transparent;
    color:rgb(213, 212, 212);
}

#main-nav .nav li.active a, #main-nav .nav a:active, #main-nav .nav a:hover {
    color: #fff;
}

#main-nav.scrolled .nav li.active a, #main-nav.scrolled .nav a:active, #main-nav.scrolled .nav a:hover {
    color: black;
}

#main-nav.scrolled .nav a {
    color:#a3a3a3;
}

#main-nav li {
    background:transparent;
    margin:0 10px;
    border:2px solid transparent;
}

#main-nav .dropdown-menu a {
    font-size:14px;
}

#main-nav .navbar-toggle {
    border:1px solid rgba(255,255,255,0.5);
    border-radius:0;
}

#main-nav .icon-bar {
    background:#fff;
}


/* Hover Effect */
#main-nav .nav a {
    position:relative;
    cursor: pointer;
}
/* ... */

